--- a/src/Bolbo/BlogBundle/Resources/views/Post/getPosts.html.twig
+++ b/src/Bolbo/BlogBundle/Resources/views/Post/getPosts.html.twig
@@ -1,4 +1,4 @@
-{% extends "AcmeDemoBundle::layout.html.twig" %}
+{% extends "BolboBlogBundle::layout.html.twig" %}
 
 {% block title "Symfony - Notes" %}
 
@@ -7,9 +7,6 @@
 {% block content %}
     <h1 class="title">{{ 'note.list.headline'|trans({}, 'AcmeDemoBundle') }}</h1>
 
-    <p>
-        {{ 'note.offset'|trans({}, 'AcmeDemoBundle') }}: {{ data.offset ?: '-' }}, {{ 'note.limit'|trans({}, 'AcmeDemoBundle') }}: {{ data.limit }}
-    </p>
 
     <ul id="note-list">
         {% for id, note in data.notes %}
@@ -26,5 +23,3 @@
         <a href="{{ path('new_note') }}">{{ 'note.new.link'|trans({}, 'AcmeDemoBundle') }}</a>
     </p>
 {% endblock %}
-
-{% set code = code(_self) %}
