add Edit form for posts

--- a/src/Bolbo/BlogBundle/Resources/views/Post/getPosts.html.twig
+++ b/src/Bolbo/BlogBundle/Resources/views/Post/getPosts.html.twig
@@ -12,10 +12,9 @@
         {% for id, post in data.posts %}
             <li>
                 <a href="{{ path('get_post', {'id': post.id}) }}">{{ post }}</a>
-                {#
-                 [<a href="{{ path('edit_posts', {'id': id}) }}">{{ 'post.edit.link'|trans({}, 'BolboBlobBundle') }}</a>]
-                 [<a href="{{ path('remove_posts', {'id': id}) }}">{{ 'post.remove.link'|trans({}, 'BolboBlobBundle') }}</a>]
-                 #}
+                [<a href="{{ path('edit_posts', {'id': post.id}) }}">{{ 'post.edit.link'|trans({}, 'BolboBlobBundle') }}</a>]
+                [<a href="{{ path('remove_posts', {'id': post.id}) }}">{{ 'post.remove.link'|trans({}, 'BolboBlobBundle') }}</a>]
+
             </li>
         {% else %}
             <li>{{ 'post.list.empty'|trans({}, 'BolboBlobBundle') }}</li>
