wip add new post

--- a/src/Bolbo/BlogBundle/Resources/views/Post/getPosts.html.twig
+++ b/src/Bolbo/BlogBundle/Resources/views/Post/getPosts.html.twig
@@ -21,5 +21,6 @@
         {% endfor %}
     </ul>
     <p>
+        <a href="{{ path('new_post') }}">{{ 'post.new.link'|trans({}, 'BolboBlogBundle') }}</a>
     </p>
 {% endblock %}
