update edit & create function

--- a/src/Bolbo/BlogBundle/Resources/views/Post/editPost.html.twig
+++ b/src/Bolbo/BlogBundle/Resources/views/Post/editPost.html.twig
@@ -1,6 +1,6 @@
 {% extends "BolboBlogBundle::layout.html.twig" %}
 
-{% block title "Symfony - Posts" %}
+{% block title "Bolbo Blog - Edit Post" %}
 
 {% block content_header '' %}
 
