--- a/src/Bolbo/BlogBundle/Resources/views/Post/getPost.html.twig
+++ b/src/Bolbo/BlogBundle/Resources/views/Post/getPost.html.twig
@@ -1,6 +1,6 @@
 {% extends "BolboBlogBundle::layout.html.twig" %}
 
-{% block title "Symfony - Post" %}
+{% block title "Bolbo Blog - Post" %}
 
 {% block content_header '' %}
 
